--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 					// country
 					var country = address_component.long_name;
 				}
-				alert(city +", " + country);
+				alert("1");
+				alert(city +" , " + country);
             });
           } else {
             alert("No results found");
