--- a/index.html
+++ b/index.html
@@ -1,75 +1,104 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <title>Capture Photo</title>
 
-  </head>
-  <body>
-    <div id="map-canvas">
-    	<input type="submit" onclick="viewMap();  return false;" value="view map"  /><br/>
-    	<input type="submit" onclick="viewCoordinates();  return false;" value="view coordinates"  /><br/>
-    	<input type="submit" onclick="viewLocationOnMap();  return false;" value="view location on map"  />
-    </div>
-    
-        <script>
-		var map;
-		function viewMap() 
-		{
-			var mapOptions = 
-			{
-			    zoom: 8,
-				center: new google.maps.LatLng(-34.397, 150.644)
-			};
-			map = new google.maps.Map(document.getElementById('map-canvas'),
-			mapOptions);
-		}
-		function viewCoordinates()
-		{
-			navigator.geolocation.getCurrentPosition(onSuccess, onError);
-		}
-		function onSuccess(position) 
-	    {
-	    	alert(	"Coordinates:\n" +
-	    			"Latitude: "	+ position.coords.latitude 	+ "\n" +
-	    			"Longitude: "		+ position.coords.longitude);
-	    }
-	
-	    // onError Callback receives a PositionError object
-	    //
-	    function onError(error) 
-	    {
-	        alert(	'Sending location failed\n'	+
-	        		'code: '    + error.code    + '\n' +
-	              	'message: ' + error.message + '\n');
-	    }	
-		function viewLocationOnMap()
-		{
-			navigator.geolocation.getCurrentPosition(onSuccess1, onError);
-		}
-		function onSuccess1(position)
-		{
-			
-			var mapOptions = 
-			{
-			    zoom: 15,
-				center: new google.maps.LatLng(position.coords.latitude, position.coords.longitude),
-				mapTypeId:google.maps.MapTypeId.ROADMAP
-			};
-			map = new google.maps.Map(document.getElementById('map-canvas'),
-			mapOptions);
-		}
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8">
+
+    var pictureSource;   // picture source
+    var destinationType; // sets the format of returned value 
+
+    // Wait for Cordova to connect with the device
+    //
+    document.addEventListener("deviceready",onDeviceReady,false);
+
+    // Cordova is ready to be used!
+    //
+    function onDeviceReady() {
+        pictureSource=navigator.camera.PictureSourceType;
+        destinationType=navigator.camera.DestinationType;
+    }
+
+    // Called when a photo is successfully retrieved
+    //
+    function onPhotoDataSuccess(imageData) {
+      // Uncomment to view the base64 encoded image data
+      // console.log(imageData);
+
+      // Get image handle
+      //
+      var smallImage = document.getElementById('smallImage');
+
+      // Unhide image elements
+      //
+      smallImage.style.display = 'block';
+
+      // Show the captured photo
+      // The inline CSS rules are used to resize the image
+      //
+      smallImage.src = "data:image/jpeg;base64," + imageData;
+    }
+
+    // Called when a photo is successfully retrieved
+    //
+    function onPhotoURISuccess(imageURI) {
+      // Uncomment to view the image file URI 
+      // console.log(imageURI);
+
+      // Get image handle
+      //
+      var largeImage = document.getElementById('largeImage');
+
+      // Unhide image elements
+      //
+      largeImage.style.display = 'block';
+
+      // Show the captured photo
+      // The inline CSS rules are used to resize the image
+      //
+      largeImage.src = imageURI;
+    }
+
+    // A button will call this function
+    //
+    function capturePhoto() {
+      // Take picture using device camera and retrieve image as base64-encoded string
+      navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 50,
+        destinationType: destinationType.DATA_URL });
+    }
+
+    // A button will call this function
+    //
+    function capturePhotoEdit() {
+      // Take picture using device camera, allow edit, and retrieve image as base64-encoded string  
+      navigator.camera.getPicture(onPhotoDataSuccess, onFail, { quality: 20, allowEdit: true,
+        destinationType: destinationType.DATA_URL });
+    }
+
+    // A button will call this function
+    //
+    function getPhoto(source) {
+      // Retrieve image file location from specified source
+      navigator.camera.getPicture(onPhotoURISuccess, onFail, { quality: 50, 
+        destinationType: destinationType.FILE_URI,
+        sourceType: source });
+    }
+
+    // Called if something bad happens.
+    // 
+    function onFail(message) {
+      alert('Failed because: ' + message);
+    }
 
     </script>
+  </head>
+  <body>
+    <button onclick="capturePhoto();">Capture Photo</button> <br>
+    <button onclick="capturePhotoEdit();">Capture Editable Photo</button> <br>
+    <button onclick="getPhoto(pictureSource.PHOTOLIBRARY);">From Photo Library</button><br>
+    <button onclick="getPhoto(pictureSource.SAVEDPHOTOALBUM);">From Photo Album</button><br>
+    <img style="display:none;width:60px;height:60px;" id="smallImage" src="" />
+    <img style="display:none;" id="largeImage" src="" />
   </body>
 </html>
